--- a/index.html
+++ b/index.html
@@ -47,17 +47,13 @@
                         <a class="text-white px-3" href="">
                             <i class="fab fa-facebook-f"></i>
                             <!-- </a>
-                        <a class="text-white px-3" href="">
-                            <i class="fab fa-twitter"></i>
-                        </a> -->
-                            <!-- <a class="text-white px-3" href="">
-                            <i class="fab fa-linkedin-in"></i> -->
+                         -->
+                            <!-- -->
                         </a>
                         <a class="text-white px-3" href="">
                             <i class="fab fa-instagram"></i>
                             <!-- </a>
-                        <a class="text-white pl-3" href="">
-                            <i class="fab fa-youtube"></i>
+                       
                         </a> -->
                     </div>
                 </div>
@@ -80,9 +76,9 @@
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Accueil</a>
-                        <a href="about.html" class="nav-item nav-link">À propos de nous</a>
+                        <a href="À propos de nous.html" class="nav-item nav-link">À propos de nous</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
-                        <a href="project.html" class="nav-item nav-link">Project</a>
+                        <a href="Projet.html" class="nav-item nav-link">Projet</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu rounded-0 m-0">
@@ -176,7 +172,7 @@
     <!-- Carousel End -->
 
 
-    <!-- About Start -->
+    <!-- À propos de nous Start -->
     <div class="container-fluid bg-light">
         <div class="container">
             <div class="row">
@@ -221,7 +217,7 @@
             </div>
         </div>
     </div>
-    <!-- About End -->
+    <!-- À propos de nous End -->
 
 
     <!-- Services Start -->
@@ -291,7 +287,7 @@
     <!-- Features End -->
 
 
-    <!-- Projects Start -->
+    <!-- Projets Start -->
     <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="row justify-content-center">
@@ -317,12 +313,12 @@
                             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
-                            <h4 class="text-white mb-4">Project Name</h4>
+                            <h4 class="text-white mb-4">Projet Name</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
                                 </a>
-                                <a class="btn btn-outline-primary m-1" href="img/portfolio-1.jpg" data-lightbox="portfolio">
+                                <a class="btn btn-outline-primary m-80*" href="img/portfolio-1.jpg" data-lightbox="portfolio">
                                     <i class="fa fa-eye"></i>
                                 </a>
                             </div>
@@ -335,7 +331,7 @@
                             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
-                            <h4 class="text-white mb-4">Project Name</h4>
+                            <h4 class="text-white mb-4">Projet Name</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
@@ -353,7 +349,7 @@
                             <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
-                            <h4 class="text-white mb-4">Project Name</h4>
+                            <h4 class="text-white mb-4">Projet Name</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
@@ -371,7 +367,7 @@
                             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
-                            <h4 class="text-white mb-4">Project Name</h4>
+                            <h4 class="text-white mb-4">Projet Name</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
@@ -389,7 +385,7 @@
                             <img class="img-fluid" src="img/portfolio-5.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
-                            <h4 class="text-white mb-4">Project Name</h4>
+                            <h4 class="text-white mb-4">Projet Name</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
@@ -407,7 +403,7 @@
                             <img class="img-fluid" src="img/portfolio-6.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
-                            <h4 class="text-white mb-4">Project Name</h4>
+                            <h4 class="text-white mb-4">Projet Name</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
@@ -422,7 +418,7 @@
             </div>
         </div>
     </div>
-    <!-- Projects End -->
+    <!-- Projets End -->
 
 
     <!-- Team Start -->
