--- a/projet.html
+++ b/projet.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CHOIXVERRE - Interior Design HTML Template</title>
+    <title>CHOIXVERRE - Projet</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -47,17 +47,12 @@
                         <a class="text-white px-3" href="">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="text-white px-3" href="">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a class="text-white px-3" href="">
-                            <i class="fab fa-linkedin-in"></i>
+
                         </a>
                         <a class="text-white px-3" href="">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a class="text-white pl-3" href="">
-                            <i class="fab fa-youtube"></i>
+
                         </a>
                     </div>
                 </div>
@@ -79,10 +74,10 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="index.html" class="nav-item nav-link">Accueil</a>
+                        <a href="À propos de nous.html" class="nav-item nav-link">À propos de nous</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
-                        <a href="project.html" class="nav-item nav-link active">Project</a>
+                        <a href="Projet.html" class="nav-item nav-link active">Projet</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu rounded-0 m-0">
@@ -145,7 +140,7 @@
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="btn btn-outline-primary" href="">Home</a>
+                        <a class="btn btn-outline-primary" href="">Accueil</a>
                         <i class="fas fa-angle-double-right text-primary mx-2"></i>
                         <a class="btn btn-outline-primary disabled" href="">Nos projets</a>
                     </div>
@@ -156,7 +151,7 @@
     <!-- Page Header Start -->
 
 
-    <!-- Projects Start -->
+    <!-- Projets Start -->
     <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="row justify-content-center">
@@ -182,7 +177,7 @@
                             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
-                            <h4 class="text-white mb-4">Project Name</h4>
+                            <h4 class="text-white mb-4">Projet Name</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
@@ -200,7 +195,7 @@
                             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
-                            <h4 class="text-white mb-4">Project Name</h4>
+                            <h4 class="text-white mb-4">Projet Name</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
@@ -218,7 +213,7 @@
                             <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
-                            <h4 class="text-white mb-4">Project Name</h4>
+                            <h4 class="text-white mb-4">Projet Name</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
@@ -236,7 +231,7 @@
                             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
-                            <h4 class="text-white mb-4">Project Name</h4>
+                            <h4 class="text-white mb-4">Projet Name</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
@@ -254,7 +249,7 @@
                             <img class="img-fluid" src="img/portfolio-5.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
-                            <h4 class="text-white mb-4">Project Name</h4>
+                            <h4 class="text-white mb-4">Projet Name</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
@@ -272,7 +267,7 @@
                             <img class="img-fluid" src="img/portfolio-6.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
-                            <h4 class="text-white mb-4">Project Name</h4>
+                            <h4 class="text-white mb-4">Projet Name</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
@@ -287,7 +282,7 @@
             </div>
         </div>
     </div>
-    <!-- Projects End -->
+    <!-- Projets End -->
 
 
     <!-- Footer Start -->
@@ -299,46 +294,24 @@
                 <p><i class="fa fa-phone-alt mr-2"></i>Tél: 0522225259 Gsm: 0661327102-06613279580</p>
                 <p><i class="fa fa-envelope mr-2"></i>choix.verre@gmail.com</p>
                 <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
+
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-primary mb-4">Liens rapides</h4>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Accueil</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>À propos de nous Us</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>NOS SERVICES</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Nos projets</a>
                     <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-primary mb-4">Popular Links</h4>
-                <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>NOS SERVICES</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Nos projets</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-primary mb-4">Newsletter</h4>
-                <form action="">
-                    <div class="form-group">
-                        <input type="text" class="form-control border-0" placeholder="Your Name" required="required" />
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control border-0" placeholder="Your Email" required="required" />
-                    </div>
-                    <div>
-                        <button class="btn btn-lg btn-primary btn-block border-0" type="submit">Submit Now</button>
-                    </div>
-                </form>
-            </div>
+
+
         </div>
         <div class="container border-top border-secondary pt-5">
             <p class="m-0 text-center text-white">
