--- a/À propos de nous.html
+++ b/À propos de nous.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CHOIXVERRE - About</title>
+    <title>CHOIXVERRE - À propos de nous</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -47,17 +47,13 @@
                         <a class="text-white px-3" href="">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="text-white px-3" href="">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a class="text-white px-3" href="">
-                            <i class="fab fa-linkedin-in"></i>
+
+
                         </a>
                         <a class="text-white px-3" href="">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a class="text-white pl-3" href="">
-                            <i class="fab fa-youtube"></i>
+
                         </a>
                     </div>
                 </div>
@@ -79,10 +75,10 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link active">About</a>
+                        <a href="index.html" class="nav-item nav-link">Accueil</a>
+                        <a href="À propos de nous.html" class="nav-item nav-link active">À propos de nous</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
-                        <a href="project.html" class="nav-item nav-link">Project</a>
+                        <a href="Projet.html" class="nav-item nav-link">Projet</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu rounded-0 m-0">
@@ -141,13 +137,13 @@
         <div class="container py-5">
             <div class="row align-items-center py-4">
                 <div class="col-md-6 text-center text-md-left">
-                    <h1 class="mb-4 mb-md-0 text-primary text-uppercase">About Us</h1>
+                    <h1 class="mb-4 mb-md-0 text-primary text-uppercase">À propos de nous Us</h1>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="btn btn-outline-primary" href="">Home</a>
+                        <a class="btn btn-outline-primary" href="">Accueil</a>
                         <i class="fas fa-angle-double-right text-primary mx-2"></i>
-                        <a class="btn btn-outline-primary disabled" href="">About Us</a>
+                        <a class="btn btn-outline-primary disabled" href="">À propos de nous Us</a>
                     </div>
                 </div>
             </div>
@@ -156,7 +152,7 @@
     <!-- Page Header Start -->
 
 
-    <!-- About Start -->
+    <!-- À propos de nous Start -->
     <div class="container-fluid bg-light">
         <div class="container">
             <div class="row">
@@ -202,7 +198,7 @@
             </div>
         </div>
     </div>
-    <!-- About End -->
+    <!-- À propos de nous End -->
 
 
     <!-- Features Start -->
@@ -323,17 +319,17 @@
                 <p><i class="fa fa-phone-alt mr-2"></i>Tél: 0522225259 Gsm: 0661327102-06613279580</p>
                 <p><i class="fa fa-envelope mr-2"></i>choix.verre@gmail.com</p>
                 <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
+
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-primary mb-4">Liens rapides</h4>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Accueil</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>À propos de nous Us</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>NOS SERVICES</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Nos projets</a>
                     <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
