--- a/Projet.html
+++ b/Projet.html
@@ -78,13 +78,14 @@
                         <a href="À propos de nous.html" class="nav-item nav-link">À propos de nous</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="Projet.html" class="nav-item nav-link active">Projet</a>
-                        <div class="nav-item dropdown">
+                        <a href="single.html" class="nav-item nav-link">Blog Detail</a>
+                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="blog.html" class="dropdown-item">Blog Grid</a>
                                 <a href="single.html" class="dropdown-item">Blog Detail</a>
                             </div>
-                        </div>
+                        </div> -->
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
