--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <a href="À propos de nous.html" class="nav-item nav-link">À propos de nous</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="Projet.html" class="nav-item nav-link">Projet</a>
-                        <a href="Projet.html" class="nav-item nav-link">Blog Detail</a>
+                        <a href="single.html" class="nav-item nav-link">Blog Detail</a>
 
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
